Tue Jul 29 14:00:37 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsteventroll.[hc]: added support for segment
	display in the canvas.

	* beast-gtk/bsteventrollctrl.[hc]: implement alignment
	tool to align events to a given segment.

	* beast-gtk/bstpartdialog.c: add button and menu item
	to select event-alignment tool.

	* beast-gtk/gxk/gxkutils.c: disabled
	gxk_tree_selection_force_browse() for now, since it aparently
	triggers a segfaulting bug in the Gtk+-2.2.2 treeview.

Mon Jul 28 12:56:40 2003  Tim Janik  <timj@gtk.org>

	* configure.in: rewrote OSS pcm and midi device checks for
	clarity, renamed OSS pcm/midi device options.
	applied changes by Ben Collver <collver1@comcast.net>, to
	check for NetBSD sound devices.

Mon Jul 28 05:25:03 2003  Tim Janik  <timj@gtk.org>

	* acbeast.m4 (ac_vm): enable warning options for C++ code.
	fixed CXXFLAGS setup which was wrongly using CFLAGS.

Mon Jul 28 04:07:08 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/tsmview.c: add test textget handler.

	* beast-gtk/gxk/gxktexttools.[hc]: add textget functionality.
	the ability to place widgets created by special handlers from
	tags in tsm files.

Sun Jul 27 02:39:05 2003  Tim Janik  <timj@gtk.org>

	* incremented version to 0.5.5-rc1, binary age 0, interface age 0.

Sat Jul 26 04:42:09 2003  Tim Janik  <timj@gtk.org>

	* beast-gtk/bsttrackview.c: added midi channel to track roll.

Tue Jul 22 14:02:03 2003  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: announce release.

Mon Jul 21 14:47:40 2003  Tim Janik  <timj@gtk.org>

	* configure.in: release beast-0.5.4.tar.gz.

Sat Jul 19 01:50:45 2003  Tim Janik  <timj@gtk.org>

	* configure.in: throw out beast-0.5.4-rc1.tar.gz.

Fri Jul 18 19:17:54 2003  Tim Janik  <timj@gtk.org>

	* test/drum-test.bse: added drum module test.

Fri Jul 18 18:45:44 2003  Tim Janik  <timj@gtk.org>

	* configure.in (BST_RELEASE_CANDIDATE): up version number to 0.5.4,
	interface 0, binary 0.
